@@ -1,5 +1,9 @@
 2005-08-07  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* pp/opreport.cpp: don't throw a std::string but an op_runtime_error
+
+2005-08-07  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* daemon/oprofiled.c:
 	* daemon/liblegacy/init.c:
 	* daemon/liblegacy/opd_image.c:
